// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`2-level deep nested element Resolves array of nodes match snapshot 1`] = `
Object {
  "props": Object {
    "children": Array [
      1,
      2,
      3,
    ],
  },
  "tag": "div",
}
`;

exports[`2-level deep nested element Resolves text nodes match snapshot 1`] = `
Object {
  "props": Object {
    "children": Array [
      "hello ",
      Object {
        "props": Object {
          "children": Array [
            "my",
          ],
        },
        "tag": "span",
      },
      Object {
        "props": Object {
          "children": Array [
            "world",
          ],
        },
        "tag": "h2",
      },
      "friend",
    ],
  },
  "tag": "h1",
}
`;

exports[`2-level deep nested element match snapshot 1`] = `
Object {
  "props": Object {
    "children": Array [
      Object {
        "props": Object {
          "children": Array [
            Object {
              "props": Object {
                "children": Array [
                  "hello",
                ],
              },
              "tag": "h1",
            },
            Object {
              "props": Object {
                "children": Array [
                  "world",
                ],
              },
              "tag": "h2",
            },
          ],
        },
        "tag": "header",
      },
    ],
  },
  "tag": "main",
}
`;

exports[`Basic single element match snapshot 1`] = `
Object {
  "props": Object {
    "children": Array [
      "hello",
    ],
  },
  "tag": "h1",
}
`;

exports[`Basic single element match snapshot 2`] = `
Object {
  "props": Object {
    "children": Array [
      "hello",
    ],
  },
  "tag": "h1",
}
`;
